# program-upgrade-system

./: .gitignore  ASSIGNMENT_VERIFICATION.md  Anchor.toml  ERRORS_FIXED.md  IMPLEMENTATION_GUIDE.md  MENTOR_DEMO_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART_TEST.md  README.md  TEST_RESULTS.md  package.json  test_database.sql
.github/workflows/: build.yml
app/: index.html
backend/: .env.example  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/api/: migration.rs  mod.rs  upgrade.rs
backend/src/clients/: anchor_client.rs  mod.rs  squads_client.rs
backend/src/db/: mod.rs  schema.sql
backend/src/models/: migration.rs  mod.rs  proposal.rs
backend/src/services/: migration_manager.rs  mod.rs  multisig_coordinator.rs  program_builder.rs  rollback_handler.rs  timelock_manager.rs
docs/: api-reference.md  api_reference.md  architecture.md  governance.md  migration-guide.md  migration_guide.md  operational_runbook.md  testing-guide.md
programs/program-upgrade-system/: Cargo.toml
programs/program-upgrade-system/src/: constants.rs  error.rs  events.rs  lib.rs  utils.rs
programs/program-upgrade-system/src/instructions/: approve_upgrade.rs  cancel_upgrade.rs  execute_upgrade.rs  initialize_multisig.rs  migrate_account.rs  mod.rs  pause_system.rs  propose_upgrade.rs  resume_system.rs
programs/program-upgrade-system/src/state/: mod.rs
scripts/: deploy_buffer.sh  migrate_accounts.sh  propose_upgrade.sh  rollback.sh
tests/: program-upgrade-system.ts
tests/integration/: upgrade_flow_test.rs
