[package]
name = "program-upgrade-system"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_upgrade_system"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.30.1"
toml_parser = "=1.0.0"

# Force old versions compatible with Rust 1.75.0-dev
borsh = "=0.10.3"
indexmap = "=1.9.3"
toml = "=0.7.8"
toml_edit = "=0.19.15"
toml_datetime = "=0.6.3"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
